Modified structure for multi-package

--- a/.gitignore
+++ b/.gitignore
@@ -14,9 +14,9 @@ venv/
 # ===============================
 # Environment variables
 # ===============================
-.env
-.env.*
-!.env.example
+app/.env
+app/.env.example
+!app/.env.example
 
 # ===============================
 # Lint / format
